src/assets/styles/components/hero-banner.scss
@import "~assets/styles/base.scss";

.hero-banner {
  position: relative;
  background-color: rgba($header-bg, 1);
  background-image: url("assets/images/eao-hero-banner.jpg");
  background-position: top right;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: 0 0 4rem #00264d inset;

  .container {
    display: table;
    max-width: 1100px;
    min-height: 20rem;

    &-inner {
      display: table-row;
    }
  }

  &__content {
    display: table-cell;
    padding-top: 2rem;
    padding-bottom: 2rem;
    vertical-align: middle;
    color: #fff;

    h1 {
      margin-bottom: 1.5rem;
      font-size: 2.25rem;

      span {
        display: inline-block;
      }
    }

    p {
      margin-bottom: 0;
      font-weight: 300;
    }
  }

  &__actions {
    margin-top: 1.75rem;

    &-title {
      display: block;
      margin-bottom: 0.5rem;
    }

    &-buttons {
      @include flex-box();

      .btn {
        @include flex(1 1 auto);
        padding: 0.5rem;
        text-transform: uppercase;
        font-size: 0.85rem;
        font-weight: 700;

        + span {
          @include flex(0 0 auto);
          padding: 0.65rem 0.4rem;
          vertical-align: middle;
        }
      }
    }
  }
}

@media (min-width: 567px) {
  .hero-banner {
    .container {
      min-height: 20rem;
    }

    &__actions {
      &-buttons {
        .btn {
          @include flex(0 0 auto);
        }
      }
    }
  }
}

@media (min-width: 992px) {
  .hero-banner {
    .container {
      padding-top: 67px;
      min-height: 24rem;
    }
  }
}

@media (min-width: 768px) {
  .hero-banner {
    &__content {
      h1 {
        font-size: 2.65rem;
      }

      p {
        font-size: 1.25rem;
      }
    }
  }
}

@media (min-width: 1024px) {
  .hero-banner {

    &__content {
      padding-top: 3rem;
    }
  }
}

@media (min-width: 1200px) {
  .hero-banner {
    background-position: right -2rem;

    .container {
      min-height: 24rem;
    }
  }
}

@media (min-width: 1360px) {
  .hero-banner {
    background-position: right -4rem;
  }
}

@media (min-width: 1500px) {
  .hero-banner {
    background-position: right -8rem;
  }
}

@media (min-width: 1700px) {
  .hero-banner {
    background-position: right -12rem;
  }
}

@media (min-width: 1920px) {
  .hero-banner {
    background-position: right -14rem;
  }
}

